syntax = "proto3";

package TW.Harmony.Proto;
option java_package = "wallet.core.jni.proto";

// Input data necessary to create a signed transaction.
message SigningInput {
    // Chain identifier (256-bit number)
    bytes chain_id = 1;

    // Nonce (256-bit number)
    bytes nonce = 2;

    // Gas price (256-bit number)
    bytes gas_price = 3;

    // Gas limit (256-bit number)
    bytes gas_limit = 4;

    // Shard id (256-bit number)
    bytes shard_id = 5;
    
    // To shard id(256-bit number)
    bytes to_shard_id = 6;
    
    // Recipient's address.
    string to_address = 7;

    // Amount to send in wei (256-bit number)
    bytes amount = 8;

    // Optional payload
    bytes payload = 9;

    // Private key.
    bytes private_key = 10;
}

// Transaction signing output.
message SigningOutput {
    // Signed and encoded transaction bytes.
    bytes encoded = 1;

    bytes v = 2;
    bytes r = 3;
    bytes s = 4;
}
